# duckduckgo-plugin

./: Cargo.toml
src/: lib.rs
