[package]
name = "duckduckgo-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "duckduckgo_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
abi_stable = "0.11.3"
urlencoding = "2.1.3"
webbrowser = "0.8.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
